<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>br_state_estimation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sven.becker@epfl.ch">svenbecker</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>cartographer_ros</depend>
  <depend>robot_localization</depend>
  <depend>grid_map</depend>
  <depend>tf2_eigen</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>











  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
